feat: update application